deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f1-race-engineer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: f1-race-engineer
  template:
    metadata:
      labels:
        app: f1-race-engineer
    spec:
      containers:
        - name: f1-race-engineer
          image: akhildoddi/f1-race-engineer:3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: f1-config-volume
              mountPath: /config
          volumeMounts:
            - name: f1-secret-volume
              mountPath: /config/secret
              readOnly: true
      volumes:
        - name: f1-config-volume
          configMap:
            name: f1-file-config
      volumes:
        - name: f1-secret-volume
          secret:
            secretName: f1-race-secret
