clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1-clusterip-service
  namespace: f1-dev
spec:
  type: ClusterIP
  selector:
    app: f1-race-engineer
  ports:
    - port: 8081
      targetPort: 8081
