nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1-nodeport-service
  namespace: f1-dev
spec:
  type: NodePort
  selector:
    app: f1-race-engineer
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
