service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1-race-service
spec:
  selector:
    app: f1-race-engineer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
